src/test/deca/context/invalid/created/Objet/Passe_1/SameNameClass.deca
// Description:
//    teste la declaration multiple d'une classe
// Resultats:
//    SameNameClass.deca:10:6: Error: Multiple declaration of 'A' , first declaration at [6, 0]

class A {

}

class A {

}

{

}